# lexime

./: .gitignore  CLAUDE.md  Info.plist  LEMMA.md  LICENSE  Makefile  README.md  REFACTORING.md  REVIEW-2026-02-20.md  SECURITY.md  SPEC.md  icon.sh  iconset.sh  mise.toml
.github/workflows/: ci.yml  claude.yml
Resources/: icon-roman.tiff  icon.tiff
Resources/en.lproj/: InfoPlist.strings  Localizable.strings
Resources/ja.lproj/: InfoPlist.strings  Localizable.strings
Sources/: AppContext.swift  Bridging-Header.h  CandidateManager.swift  CandidatePanel.swift  ConfigStore.swift  DictBridge.swift  EngineContainer.swift  GhostTextManager.swift  InputSource.swift  InputSourceMonitor.swift  InputState.swift  KeyHandlers.swift  LeximeInputController.swift  MarkedTextManager.swift  RomajiConverter.swift  RomajiTable.swift  SettingsView.swift  SettingsWindowController.swift  SnippetView.swift  UIServices.swift  UserDictionaryView.swift  lexime-select-input.swift  main.swift
Sources/Controller/: ModeController.swift  SessionCoordinator.swift
Sources/Services/: EngineControlService.swift  SnippetService.swift  SnippetTOML.swift  UserDictionaryService.swift
Tests/: TestCandidateManager.swift  TestDictFFI.swift  TestFakes.swift  TestModeController.swift  TestRomajiConverter.swift  TestRomajiFFI.swift  TestRomajiTrie.swift  TestRunner.swift  TestSessionCoordinator.swift  TestSessionFFI.swift  TestSnippetTOML.swift
assets/icon/macos/: lexime.icns
docs/: ime-research.md
engine/: Cargo.toml  build-script-baseline.txt  deny.toml  quarantine-allowlist.toml
engine/crates/lex-cli/: Cargo.toml
engine/crates/lex-cli/src/: lib.rs
engine/crates/lex-cli/src/candidates/: mod.rs  sudachi.rs  wikipedia.rs
engine/crates/lex-cli/src/commands/: candidates_ops.rs  config_ops.rs  convert_ops.rs  dict_ops.rs  mod.rs  neural_ops.rs  user_dict_ops.rs
engine/crates/lex-cli/src/dict_source/: extras.rs  mod.rs  mozc.rs  pos_map.rs  sudachi.rs  symbols.rs  symbols.tsv
engine/crates/lex-cli/src/dict_source/extras/: culture.tsv  food.tsv  geography.tsv  history.tsv  it.tsv
engine/crates/lex-core/: Cargo.toml  build.rs
engine/crates/lex-core/benches/: candidates.rs  converter.rs
engine/crates/lex-core/src/: default_settings.toml  lib.rs  numeric.rs  settings.rs
engine/crates/lex-core/src/candidates/: mod.rs  neural.rs  predictive.rs  standard.rs  strategy.rs
engine/crates/lex-core/src/converter/: constrained.rs  cost.rs  explain.rs  features.rs  lattice.rs  mod.rs  postprocess.rs  reranker.rs  resegment.rs  rewriter.rs  testutil.rs  tune.rs  viterbi.rs
engine/crates/lex-core/src/converter/tests/: basic.rs  bench.rs  grouping.rs  history.rs  mod.rs  reranker.rs  rewriter.rs
engine/crates/lex-core/src/converter/tests/rewriter/: hiragana_variant.rs  kanji_variant.rs  katakana.rs  mod.rs  numeric.rs  partial_hiragana.rs  run_rewriters.rs
engine/crates/lex-core/src/dict/: composite.rs  connection.rs  connection_io.rs  entry.rs  mod.rs  trie_dict.rs  trie_dict_io.rs
engine/crates/lex-core/src/dict/tests/: connection.rs  trie_dict.rs
engine/crates/lex-core/src/neural/: mod.rs  scoring.rs  speculative.rs  tests.rs
engine/crates/lex-core/src/romaji/: config.rs  convert.rs  default_romaji.toml  mod.rs  table.rs  trie.rs
engine/crates/lex-core/src/snippets/: config.rs  mod.rs  store.rs  variables.rs
engine/crates/lex-core/src/user_dict/: mod.rs  tests.rs
engine/crates/lex-core/src/user_history/: mod.rs  persistence.rs  tests.rs  wal.rs
engine/crates/lex-session/: Cargo.toml
engine/crates/lex-session/proptest-regressions/tests/: proptest_fsm.txt
engine/crates/lex-session/src/: auto_commit.rs  candidate_gen.rs  commit.rs  composing.rs  ghost.rs  key_handlers.rs  lattice_cache.rs  lib.rs  response.rs  snippet_handler.rs  submode.rs  types.rs
engine/crates/lex-session/src/tests/: auto_commit.rs  basic.rs  candidates.rs  corpus.rs  ghost.rs  mod.rs  proptest_fsm.rs  simulator.rs  snippets.rs  submode.rs
engine/crates/lex-session/src/types/: composition.rs  mod.rs
engine/data/: accuracy-corpus.toml  snapshot-readings.txt
engine/examples/: debug_convert.rs
engine/include/: engine.h
engine/src/: async_worker.rs  candidates.rs  lib.rs  session.rs  trace_init.rs  unicode.rs
engine/src/api/: engine.rs  mapping.rs  mod.rs  resources.rs  session.rs  snippet_store.rs  types.rs  user_dict.rs
engine/src/candidates/: mod.rs  standard.rs  tests.rs
engine/src/converter/: cost.rs  explain.rs  lattice.rs  mod.rs  postprocess.rs  reranker.rs  rewriter.rs  testutil.rs  viterbi.rs
engine/src/converter/tests/: nbest.rs
engine/src/dict/: connection.rs  connection_io.rs  mod.rs  trie_dict.rs
engine/src/dict/source/: mod.rs  mozc.rs  pos_map.rs  sudachi.rs
engine/src/dict/tests/: connection.rs  mod.rs  trie_dict.rs
engine/src/ffi/: candidates.rs  connection.rs  convert.rs  dict.rs  history.rs  mod.rs  neural.rs  romaji.rs  session.rs  tests.rs
engine/src/neural/: gpt2.rs  mod.rs  tokenizer.rs
engine/src/romaji/: convert.rs  mod.rs  trie.rs
engine/src/session/: auto_commit.rs  candidate_gen.rs  commit.rs  composing.rs  ghost.rs  key_handlers.rs  mod.rs  response.rs  submode.rs  types.rs
engine/src/session/tests/: auto_commit.rs  basic.rs  candidates.rs  ghost.rs  mod.rs  submode.rs
engine/src/user_history/: cost.rs  mod.rs  tests.rs
engine/supply-chain/: audits.toml  config.toml
engine/testcorpus/: accuracy-corpus-history.toml  accuracy-corpus.toml
scripts/: check-build-scripts.sh  check-jis-keycode10.swift  check-quarantine.sh  fetch-mozc-dict.sh  icon.sh  iconset.sh
