[package]
name = "lex_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["staticlib", "lib"]

[[bin]]
name = "dictool"
path = "src/bin/dictool.rs"

[[bin]]
name = "lextool"
path = "src/bin/lextool.rs"

[features]
default = []
trace = ["tracing/max_level_debug", "tracing-subscriber", "tracing-appender"]
neural = ["candle-core", "candle-nn", "dep:anyhow"]

[dependencies]
tracing = { version = "0.1", features = ["max_level_off"] }
lexime-trie = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
thiserror = "2"
ureq = "3"
zip = { version = "7", default-features = false, features = ["deflate"] }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
anyhow = { version = "1", optional = true }

[dependencies.candle-core]
version = "0.9"
optional = true

[dependencies.candle-nn]
version = "0.9"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json", "env-filter"]
optional = true

[dependencies.tracing-appender]
version = "0.2"
optional = true
