[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "lex_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = []
uniffi-cli = ["uniffi/cli"]
trace = ["tracing/max_level_debug", "tracing-subscriber", "tracing-appender"]
neural = ["candle-core", "candle-nn", "dep:anyhow"]

[dependencies]
uniffi = "0.29"
tracing = { version = "0.1", features = ["max_level_off"] }
lexime-trie = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
thiserror = "2"
memmap2 = "0.9"
unicode-width = "0.2"
anyhow = { version = "1", optional = true }

[dependencies.candle-core]
version = "0.9"
optional = true

[dependencies.candle-nn]
version = "0.9"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json", "env-filter"]
optional = true

[dependencies.tracing-appender]
version = "0.2"
optional = true
