[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tracing = { version = "0.1", features = ["max_level_off"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[package]
name = "lex_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = []
uniffi-cli = ["uniffi/cli"]
trace = ["lex-core/trace", "lex-session/trace", "tracing/max_level_debug", "tracing-subscriber", "tracing-appender"]
neural = ["lex-core/neural"]

[dependencies]
lex-core = { path = "crates/lex-core" }
lex-session = { path = "crates/lex-session" }
uniffi = "0.29"
thiserror = { workspace = true }
tracing = { workspace = true }

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json", "env-filter"]
optional = true

[dependencies.tracing-appender]
version = "0.2"
optional = true
