[package]
name = "lex-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "lex_cli"

[[bin]]
name = "dictool"
path = "src/bin/dictool.rs"

[[bin]]
name = "lextool"
path = "src/bin/lextool.rs"

[features]
default = []
neural = ["lex-core/neural"]

[dependencies]
lex-core = { path = "../lex-core" }
clap = { workspace = true }
ureq = "3"
zip = { version = "7", default-features = false, features = ["deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
