[package]
name = "lex-cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[lib]
name = "lex_cli"

[[bin]]
name = "dictool"
path = "src/bin/dictool.rs"

[[bin]]
name = "lextool"
path = "src/bin/lextool.rs"

[features]
default = []
neural = ["lex-core/neural"]

[dependencies]
lex-core = { path = "../lex-core" }
clap = { workspace = true }
ureq = "3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
# Used by `dictool candidates mine` only — SudachiDict releases ship as ZIP.
# Kept as a hard dep (not optional) since the CLI is a build/dev tool and
# not shipped with the IME itself.
zip = { version = "7", default-features = false, features = ["deflate"] }
# Used by `dictool candidates corpus` only — Wikipedia dumps ship as bz2.
# Streaming decompress so we never materialize the full ~14GB XML on disk.
bzip2 = "0.4"
