[package]
name = "lex-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lex_core"

[features]
default = []
trace = ["tracing/max_level_debug"]
neural = ["candle-core", "candle-nn", "dep:anyhow"]

[dependencies]
tracing = { workspace = true }
lexime-trie = "0.1"
serde = { workspace = true }
bincode = "1"
thiserror = { workspace = true }
memmap2 = "0.9"
unicode-width = "0.2"
anyhow = { version = "1", optional = true }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "converter"
harness = false

[[bench]]
name = "candidates"
harness = false
